Fixing Home responsive on tablets

--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -17,7 +17,7 @@
     margin-top: 6px;
   }
   &.onlyMobile {
-    @include media-min-width($medium-up) {
+    @include media-min-width($large-up) {
       display: none;
     }
   }
